refactore user management to filter payer and provider users